2005-01-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: added parse() and render operations to
	Lifeline.

2005-01-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/pluginmanager.py: raise exceptions when a wrong xml-tag is
	found in the plugin.xml file.

2004-12-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/implementation.py: removed recursive import of
	InterfaceItem.

2004-12-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	
	* gaphor/diagram/association.py (unlink): explicitly unlink()
	AssociationEnds.
	* gaphor/diagram/interaction.py: New class, a sequence diagram
	interaction.
	* gaphor/diagram/lifeline.py: New class, a sequence diagram lifeline
	* gaphor/diagram/message.py: New class, a Message (seq. diagram).

2004-11-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	
	* gaphor/ui/mainwindow.py: Allow mainwindow to shrink.

2004-11-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: implemented Interaction diagrams.
	* utils/genUML2.py: let code generator support Sort suffix.
	* gaphor/misc/resource.py: Added resource file backend.
	* gaphor/__init__.py: save resources when the program exits
	* gaphor/ui/mainwindow.py: Added persistent property for window size.
	* gaphor/diagram/placementactions.py: made reset-tool property
	persistent.

2004-11-22  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/resource.py: added persistent property to resource values.
	This should allow us to store specific properties to a persistent
	storage.
	* gaphor/ui/toolbox.py: added persistent properties that should tell the
	box to be open or closed at startup.

2004-11-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/activitynodes.py: Renamed node.py to this file.
	* gaphor/diagram/artifact.py: Implemented Artifact item.
	* gaphor/diagram/node.py: Implemented Node item.
	* data/pixmaps/node24.png, artifact24.png: new icons.

2004-11-19  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
